--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-@media screen and (min-width: 320px) and (max-width: 414px) and (orientation: portrait) {	
+@media screen and (min-width: 320px) and (max-width: 575px) and (orientation: portrait) {	
 
 body, html{
     height:100%;
@@ -125,39 +125,38 @@ button:focus {
 
     header{
         width:100%;
-        height:101px;
+        height:103px;
         background-color: #000000;
     }
 
     .logo1{
-        background: url(../img/logo1-ac-vect.svg) no-repeat bottom center;
+        background: url(../img/logo1-ac-vect.svg) no-repeat top center;
         background-size: 170px 88px;
         width:100%;
-        height:101px;
-        margin-left: auto;
-        margin-right: auto;
+        height:103px;
+        background-position-y: 15px;
     }
 
-    header .sticky-nav{          /* topbar noire (class d'appel de js pour waypoint déclencheur sticky) : barre de menu, invisible */
+    .sticky-nav{          /* topbar noire (class d'appel de js pour waypoint déclencheur sticky) : barre de menu, invisible */
         background-color:rgba(0, 0, 0, 0);
         opacity: 0;
         width:100%;
         height:54px;
     }
 
-   header .sticky-nav.stuck{  /* barre de menu, devenu fixe */
+    .sticky-nav.stuck{  /* barre de menu, devenu fixe */
         position: fixed;
         top:0;
         left:0;
     }
 
-   .sticky-nav.stuck.logo3{  /* barre de menu, devenu fixe à laquelle on ajoute le petit logo et le tout devient visible */
+    .sticky-nav.stuck.logo3{  /* barre de menu, devenu fixe à laquelle on ajoute le petit logo et le tout devient visible */
         background: url(../img/mobile/logo3.svg) rgba(0, 0, 0, 1) no-repeat 15px 15px;
         background-size: 213px 22px;
         opacity: 1;
         z-index: 500;
         filter: alpha(opacity=100);
-     transition: opacity 0.5s ease-in-out;
+        transition: opacity 0.5s ease-in-out;
     }
 
     nav#menu{
@@ -179,7 +178,6 @@ button:focus {
         height:100vh;
         top:0;
         left:0;
-  
         background: url(../img/logo1-ac-vect.svg), url(../img/mobile/mobile_arabesque1.png);
         background-repeat: no-repeat, no-repeat;
         background-position:top center, bottom left;
@@ -197,8 +195,8 @@ button:focus {
         right:15px;
         top: 15px;
         z-index: 1001;
-		      transform: rotate(0deg);
-		   transition: transform 300ms ease-out 0s;
+		transform: rotate(0deg);
+		transition: transform 300ms ease-out 0s;
     }
 
     .menu-nav.open {         
@@ -217,7 +215,6 @@ button:focus {
         top:0;
         right:-100%;
         z-index: 700;
-
         background: url(../img/angeliquecalfatidotcom_motif-n.gif) repeat 0 0;
         background-size: 8px 8px;
         width:100%;
@@ -225,8 +222,8 @@ button:focus {
     }
 
     .select {             
-        -webkit-animation: moveToLeftFade .7s ease both;
-        animation: moveToLeftFade .7s ease both;
+        -webkit-animation: moveToLeftFade .8s ease both;
+        animation: moveToLeftFade .8s ease both;
     }
 
     @-webkit-keyframes moveToLeftFade {
@@ -240,18 +237,17 @@ button:focus {
     }
 
     .close {             
-    
-        -webkit-animation: moveFromLeftFade .6s ease both;
-        animation: moveFromLeftFade .6s ease both;
+        -webkit-animation: moveFromLeftFade .7s ease both;
+        animation: moveFromLeftFade .7s ease both;
     }
 
     @-webkit-keyframes moveFromLeftFade {
-        from { opacity: 0.4; -webkit-transform: translateX(-100%); }
+        from { opacity: 0.6; -webkit-transform: translateX(-100%); }
     }
-    @keyframes moveFromLeftFade {
-        from { opacity: 0.4; transform: translateX(-100%); }
-    } 
 
+    @keyframes moveFromLeftFade {
+        from { opacity: 0.6; transform: translateX(-100%); }
+    } 
 
     #navigation-mobile li {
         list-style: none;
@@ -263,18 +259,23 @@ button:focus {
         display: block;
         text-align: center;
         font-size: 16px;
-        line-height: 22px;
+        line-height: 19px;
         text-transform: uppercase;
         color:rgba(224, 220, 204, 0.6);
     }
 
+    #navigation-mobile li img{
+        margin-bottom:19px;
+    }
+
     #navigation-mobile li:first-child{
-        margin-top: 142px;
+        margin-top: 161px;
     }
 
     #navigation-mobile li a:hover{
         color:#e0dccc;
     }
+
     #navigation-mobile li a:active,
     #navigation-mobile li a.current{
         color:#fffae4;
@@ -289,9 +290,9 @@ button:focus {
     }
 
     .covermob{
-        background-size: cover;
-        width:320px;
-        height:316px;
+        background-color: #fffae4;
+        width:100%;
+        height:auto;
     }
 
 /* ==================================================
@@ -334,14 +335,14 @@ button:focus {
 
     #modules{
         width: 100%;
-        height:603px;
+        /*height:603px;*/
         margin-bottom: 38px;
     }
 
     #modules ul{
         display:flex;
         flex-flow: row wrap;
-        justify-content: space-around;
+        justify-content: space-evenly;
     }
 
     #modules li{
@@ -414,12 +415,12 @@ button:focus {
 
     #bloc-services .costume2{
         position: absolute;
-        width: 217px;
-        height:552px;
-        width:29%;
-        height:auto;
+        /*width: 217px;
+        height:552px;*/
+        width:auto;
+        max-height:90%;
         right:0;
-        bottom:19px;
+        bottom:0;
     }
         
 
@@ -497,7 +498,7 @@ button:focus {
         margin-bottom: 0px;
         display:flex;
         flex-flow: row nowrap;
-        justify-content: space-around;
+        justify-content: space-evenly;
     }
 
     #bloc-contact li{
@@ -579,59 +580,60 @@ button:focus {
 
 }
 
-/*
-
-@media screen and (min-width: 321px) and (max-width: 375px) and (orientation: portrait) {
-
-    .ouverture{
-        background: url(../img/tablet/angeliquecalfatidotcom_cover834x829.jpg) no-repeat;
-        background-size: cover;
-        width:100%;
-        height: 373px;
-    }
-
-}
 
 
-@media screen and (min-width: 376px) and (max-width: 414px) and (orientation: portrait) {	
-
-   
-/* ==================================================
-  Cover
-================================================== 
-
-    .ouverture{
-        background: url(../img/tablet/angeliquecalfatidotcom_cover834x829.jpg) no-repeat;
-        background-size: cover;
-        width:100%;
-        height: 400px;
-    }
-
+@media screen and (min-width: 415px) and (max-width: 520px) and (orientation: portrait) {	
 
 /* ==================================================
    Bloc Encadré
-================================================== 
+================================================== */
 
-    .costume1{
-        display: inline-block;
-        position: absolute;
-        width: 217px;
-        height:552px;
-        width:25%;
-        height:auto;
-        right: 85px;
-        bottom:19px;
-    }
+#modules ul{
+    margin-left:40px;
+    margin-right:40px;
+}
 
-    .costume2{
-        display: inline-block;
+
+#bloc-services .costume1{
+        display: block;
         position: absolute;
-        width: 217px;
-        height:552px;
         width:auto;
         height:90%;
-        right: 0px;
-        bottom:19px;
+        right: 100px;
+        bottom:0;
     }
 }
-*/
+
+@media screen and (min-width: 521px) and (max-width: 575px) and (orientation: portrait) {	
+
+    /* ==================================================
+       Bloc Encadré
+    ================================================== */
+    
+    /*#bloc-services .costume1{
+            display: block;
+            position: absolute;
+            width:auto;
+            height:90%;
+            right: 200px;
+            bottom:0;
+        }*/
+
+        #bloc-services .costume2{
+            display: block;
+            position: absolute;
+            width:auto;
+            height:90%;
+            right: 160px;
+            bottom:0;
+        }
+
+        #bloc-services .costume3{
+            display: block;
+            position: absolute;
+            width:auto;
+            height:90%;
+            right: 0;
+            bottom:0;
+        }
+    }
