--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,7 @@
     box-sizing: border-box;
 }
 
-@media screen and (min-width: 320px) and (max-width: 575px) and (orientation: portrait) {	
-
-body, html{
-    height:100%;
-}
+@media screen and (min-width: 320px) and (max-width: 834px) and (orientation: portrait) {	
 
 body{
     width:100%;
@@ -68,8 +64,7 @@ h2{
 h3{
     font-size: 20px;
     line-height: 21px;
-    font-weight: 600;
-
+    font-weight: 400;
 }
 
 h4{ 
@@ -82,6 +77,8 @@ h4{
 
 h5{
     font-size: 18px;
+    font-weight: 700;
+
 }
 
 h6{
@@ -121,6 +118,10 @@ button:focus {
     color:#040302;
     border:solid 1px #e0dccc;
 }
+
+/* ==================================================
+  Header
+================================================== */
 
 
     header{
@@ -335,14 +336,16 @@ button:focus {
 
     #modules{
         width: 100%;
-        /*height:603px;*/
         margin-bottom: 38px;
+        margin-top:19px;
     }
 
     #modules ul{
         display:flex;
         flex-flow: row wrap;
-        justify-content: space-evenly;
+        justify-content: space-around;
+        margin-left:-7px;
+        margin-right:-7px;
     }
 
     #modules li{
@@ -442,7 +445,7 @@ button:focus {
     }
     
     #galerie{
-        /*position:relative;*/
+        position:relative;
         display:inline-block;
         margin-top:19px;
         width:100%;
@@ -562,6 +565,7 @@ button:focus {
         background-color: #e0dccc;
         width:100%;
     }
+
     p.p7,
     p.p7 a{
         /*padding-top: 10px;*/
@@ -577,24 +581,16 @@ button:focus {
         -webkit-text-decoration-line: underline;
                 text-decoration-line: underline;
     }
-
 }
 
+@media screen and (min-width: 415px) and (max-width: 500px) and (orientation: portrait) {	
 
+    #modules ul{
+        margin-left:30px;
+        margin-right:30px;
+    }
 
-@media screen and (min-width: 415px) and (max-width: 520px) and (orientation: portrait) {	
-
-/* ==================================================
-   Bloc Encadré
-================================================== */
-
-#modules ul{
-    margin-left:40px;
-    margin-right:40px;
-}
-
-
-#bloc-services .costume1{
+    #bloc-services .costume1{
         display: block;
         position: absolute;
         width:auto;
@@ -604,36 +600,241 @@ button:focus {
     }
 }
 
-@media screen and (min-width: 521px) and (max-width: 575px) and (orientation: portrait) {	
+@media screen and (min-width: 501px) and (max-width: 575px) and (orientation: portrait) {	
+
+    #modules ul{
+        margin-left:70px;
+        margin-right:70px;
+    }
+    
+    #bloc-services .costume2{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:90%;
+        right: 160px;
+        bottom:0;
+    }
+
+    #bloc-services .costume3{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:90%;
+        right: 0;
+        bottom:0;
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 767px) and (orientation: portrait) {	
+
+    #bloc-activity h3.mobile-p1{
+        letter-spacing: -0.1px;
+    }
+
+    #bloc-activity p.mobile-p1{
+        margin-bottom: 38px;
+    }
+
+    #modules ul{
+        margin-left:70px;
+        margin-right:70px;
+    }
+    
+    #bloc-services .costume2{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:90%;
+        right: 160px;
+        bottom:0;
+    }
+
+    #bloc-services .costume3{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:90%;
+        right: 0;
+        bottom:0;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) and (orientation: portrait) {	
+
+    body{
+        line-height: 20px;
+    }
+
+    h2{
+        font-size: 32px;
+    }
+    
+    h3{
+        font-size: 28px;
+        line-height: 20px;
+        letter-spacing: -0.1px;
+    }
+    
+    h4{ 
+        font-size: 20px;
+        margin-bottom:5px
+    }
+    
+    h5{
+        font-size: 20px;
+        line-height: 26px;
+    }
+    
+    p{
+        font-size: 14px;
+        margin-bottom:20px;
+    }
+    
+    button{
+        height:40px;
+        font-size: 14px;
+        letter-spacing: -0.4px;
+    }
+
+    header{
+        height:174px;
+    }
+
+    .logo1{
+        background: url(../img/logo1-ac-vect.svg) no-repeat top center;
+        background-size: auto 150px;
+        width:auto;
+        height:174px;
+        background-position-y: 24px;
+    }
+
+    .sticky-nav{          
+        height:141px;
+    }
+
+    .sticky-nav.stuck.logo2{  
+        background: url(../img/tablet/logo2.svg) rgba(0, 0, 0, 1) no-repeat top 24px center;
+        background-size: 234px 93px;
+        opacity: 1;
+        z-index: 500;
+        filter: alpha(opacity=100);
+        transition: opacity 0.5s ease-in-out;
+    }
 
     /* ==================================================
-       Bloc Encadré
+        Mobile Menu Navigation
     ================================================== */
-    
-    /*#bloc-services .costume1{
-            display: block;
-            position: absolute;
-            width:auto;
-            height:90%;
-            right: 200px;
-            bottom:0;
-        }*/
 
-        #bloc-services .costume2{
-            display: block;
-            position: absolute;
-            width:auto;
-            height:90%;
-            right: 160px;
-            bottom:0;
-        }
-
-        #bloc-services .costume3{
-            display: block;
-            position: absolute;
-            width:auto;
-            height:90%;
-            right: 0;
-            bottom:0;
-        }
+    #menu-nav-mobile{
+        background: url(../img/logo1-ac-vect.svg), url(../img/tablet/tablet-menu_arabesque3.png);
+        background-repeat: no-repeat, no-repeat;
+        background-position:top center, bottom left;
+        background-size: auto 150px, 273px 649px;
+        background-position-x: center, -80px;
+        background-position-y: 24px, bottom;
     }
+
+    .menu-nav{     
+        background-size: 40px 40px;
+        width: 40px;
+        height:40px;
+        right:24px;
+        top: 24px;
+    }
+
+    .menu-nav.open {         
+        background-size: 40px 40px;
+        width: 40px;
+        height:40px;
+    }
+
+    #navigation-mobile li a{
+        font-size: 28px;
+        line-height: 40px;
+    }
+
+    #navigation-mobile li img{
+        margin-bottom:40px;
+    }
+
+    #navigation-mobile li:first-child{
+        margin-top: 300px;
+    }
+
+    #bloc-actimob{
+        display:none;
+    }
+
+    #bloc-acti123{
+        display:block;
+        margin-left:-15px;
+        margin-right:-15px;
+    }
+
+    h3.p1{
+        padding-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    h5.p2{
+        margin-bottom: 10px;
+    }
+
+    #bloc-activity button.clair{
+        margin-top:40px;
+        margin-bottom: 40px;
+    }
+
+
+
+    #modules ul{
+        margin-left:70px;
+        margin-right:70px;
+    }
+    
+    #bloc-services .costume2{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:90%;
+        right: 160px;
+        bottom:0;
+    }
+
+    #bloc-services .costume3{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:90%;
+        right: 0;
+        bottom:0;
+    }
+
+    /*#bloc-services .costume1{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:90%;
+        right: 220px;
+        bottom:0;
+    }
+    
+    #bloc-services .costume2{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:90%;
+        right: 130px;
+        bottom:0;
+    }
+    
+    #bloc-services .costume3{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:92%;
+        right: 0;
+        bottom:0;
+    }*/
+}
