--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,11 @@
     border:0;
     box-sizing: border-box;
 }
-
+/*
 @media screen and (min-width: 320px) and (max-width: 834px) and (orientation: portrait) {	
+*/
+
+
 
 body{
     width:100%;
@@ -285,12 +288,13 @@ button:focus {
 /* ==================================================
   Cover
 ================================================== */
-    img.covertabland,
-    img.coverdesk{
+    .covertabland,
+    .coverdesk{
         display:none;
     }
 
     .covermob{
+        display:block;
         background-color: #fffae4;
         width:100%;
         height:auto;
@@ -330,10 +334,6 @@ button:focus {
         width: 100%;
     }
 
-    img.arabesque-d{
-        display:none;
-    }
-
     #modules{
         width: 100%;
         margin-bottom: 38px;
@@ -366,6 +366,7 @@ button:focus {
 
     #modules button.red{
         background-color: #730012;
+        border:solid 1px #730012;
     }
  
     #modules button.red:hover,
@@ -539,6 +540,8 @@ button:focus {
         background: url(../img/mail_n-icon.svg), rgba(224, 220, 204, 1);
         background-repeat: no-repeat ;
         background-position:center;
+        background-size: 43px 23px;
+
     }
 
     ul span.fbico:hover,
@@ -546,6 +549,7 @@ button:focus {
         background: url(../img/logo_fb-n-ico.svg), rgba(224, 220, 204, 1);
         background-repeat: no-repeat ;
         background-position:center;
+        background-size: 16px 30px;
     }
 
 /* ==================================================
@@ -568,7 +572,6 @@ button:focus {
 
     p.p7,
     p.p7 a{
-        /*padding-top: 10px;*/
         font-size: 12px;
         line-height: 18px;
         color:#e0dccc;
@@ -581,260 +584,5 @@ button:focus {
         -webkit-text-decoration-line: underline;
                 text-decoration-line: underline;
     }
-}
-
-@media screen and (min-width: 415px) and (max-width: 500px) and (orientation: portrait) {	
-
-    #modules ul{
-        margin-left:30px;
-        margin-right:30px;
-    }
-
-    #bloc-services .costume1{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 100px;
-        bottom:0;
-    }
-}
-
-@media screen and (min-width: 501px) and (max-width: 575px) and (orientation: portrait) {	
-
-    #modules ul{
-        margin-left:70px;
-        margin-right:70px;
-    }
-    
-    #bloc-services .costume2{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 160px;
-        bottom:0;
-    }
-
-    #bloc-services .costume3{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 0;
-        bottom:0;
-    }
-}
-
-@media screen and (min-width: 576px) and (max-width: 767px) and (orientation: portrait) {	
-
-    #bloc-activity h3.mobile-p1{
-        letter-spacing: -0.1px;
-    }
-
-    #bloc-activity p.mobile-p1{
-        margin-bottom: 38px;
-    }
-
-    #modules ul{
-        margin-left:70px;
-        margin-right:70px;
-    }
-    
-    #bloc-services .costume2{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 160px;
-        bottom:0;
-    }
-
-    #bloc-services .costume3{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 0;
-        bottom:0;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 991px) and (orientation: portrait) {	
-
-    body{
-        line-height: 20px;
-    }
-
-    h2{
-        font-size: 32px;
-    }
-    
-    h3{
-        font-size: 28px;
-        line-height: 20px;
-        letter-spacing: -0.1px;
-    }
-    
-    h4{ 
-        font-size: 20px;
-        margin-bottom:5px
-    }
-    
-    h5{
-        font-size: 20px;
-        line-height: 26px;
-    }
-    
-    p{
-        font-size: 14px;
-        margin-bottom:20px;
-    }
-    
-    button{
-        height:40px;
-        font-size: 14px;
-        letter-spacing: -0.4px;
-    }
-
-    header{
-        height:174px;
-    }
-
-    .logo1{
-        background: url(../img/logo1-ac-vect.svg) no-repeat top center;
-        background-size: auto 150px;
-        width:auto;
-        height:174px;
-        background-position-y: 24px;
-    }
-
-    .sticky-nav{          
-        height:141px;
-    }
-
-    .sticky-nav.stuck.logo2{  
-        background: url(../img/tablet/logo2.svg) rgba(0, 0, 0, 1) no-repeat top 24px center;
-        background-size: 234px 93px;
-        opacity: 1;
-        z-index: 500;
-        filter: alpha(opacity=100);
-        transition: opacity 0.5s ease-in-out;
-    }
-
-    /* ==================================================
-        Mobile Menu Navigation
-    ================================================== */
-
-    #menu-nav-mobile{
-        background: url(../img/logo1-ac-vect.svg), url(../img/tablet/tablet-menu_arabesque3.png);
-        background-repeat: no-repeat, no-repeat;
-        background-position:top center, bottom left;
-        background-size: auto 150px, 273px 649px;
-        background-position-x: center, -80px;
-        background-position-y: 24px, bottom;
-    }
-
-    .menu-nav{     
-        background-size: 40px 40px;
-        width: 40px;
-        height:40px;
-        right:24px;
-        top: 24px;
-    }
-
-    .menu-nav.open {         
-        background-size: 40px 40px;
-        width: 40px;
-        height:40px;
-    }
-
-    #navigation-mobile li a{
-        font-size: 28px;
-        line-height: 40px;
-    }
-
-    #navigation-mobile li img{
-        margin-bottom:40px;
-    }
-
-    #navigation-mobile li:first-child{
-        margin-top: 300px;
-    }
-
-    #bloc-actimob{
-        display:none;
-    }
-
-    #bloc-acti123{
-        display:block;
-        margin-left:-15px;
-        margin-right:-15px;
-    }
-
-    h3.p1{
-        padding-top: 20px;
-        margin-bottom: 30px;
-    }
-
-    h5.p2{
-        margin-bottom: 10px;
-    }
-
-    #bloc-activity button.clair{
-        margin-top:40px;
-        margin-bottom: 40px;
-    }
 
 
-
-    #modules ul{
-        margin-left:70px;
-        margin-right:70px;
-    }
-    
-    #bloc-services .costume2{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 160px;
-        bottom:0;
-    }
-
-    #bloc-services .costume3{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 0;
-        bottom:0;
-    }
-
-    /*#bloc-services .costume1{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 220px;
-        bottom:0;
-    }
-    
-    #bloc-services .costume2{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 130px;
-        bottom:0;
-    }
-    
-    #bloc-services .costume3{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:92%;
-        right: 0;
-        bottom:0;
-    }*/
-}
