--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,22 +1,26 @@
 
-@media screen and (min-width: 415px) and (max-width: 500px) and (orientation: portrait) {	
+@media screen and (min-width: 415px) and (max-width: 1920px) and (orientation: portrait) {	
 
     #modules ul{
         margin-left:30px;
         margin-right:30px;
     }
+}
+
+
+@media screen and (min-width: 456px) and (max-width: 500px) and (orientation: portrait) {	
 
     #bloc-services .costume1{
         display: block;
         position: absolute;
         width:auto;
         height:90%;
-        right: 100px;
+        right: 110px;
         bottom:0;
     }
 }
 
-@media screen and (min-width: 501px) and (max-width: 575px) and (orientation: portrait) {	
+@media screen and (min-width: 501px) and (max-width: 1920px) and (orientation: portrait) {	
 
     #modules ul{
         margin-left:70px;
@@ -51,32 +55,9 @@
     #bloc-activity p.mobile-p1{
         margin-bottom: 38px;
     }
-
-    #modules ul{
-        margin-left:70px;
-        margin-right:70px;
-    }
-    
-    #bloc-services .costume2{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 160px;
-        bottom:0;
-    }
-
-    #bloc-services .costume3{
-        display: block;
-        position: absolute;
-        width:auto;
-        height:90%;
-        right: 0;
-        bottom:0;
-    }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {	
+@media screen and (min-width: 768px) and (max-width: 1920px) {	
 
     body{
         line-height: 20px;
@@ -94,12 +75,13 @@
     }
     
     h4{ 
-        font-size: 20px;
-        margin-bottom:5px
+        font-size: 22px;
+        margin-bottom:5px;
+        margin-top:10px;
     }
     
     h5{
-        font-size: 20px;
+        font-size: 22px;
         line-height: 26px;
     }
     
@@ -110,14 +92,13 @@
     
     button{
         height:40px;
+        width:160px;
         font-size: 14px;
-        letter-spacing: -0.4px;
+        letter-spacing: 0px;
     }
 
     header{
         height:174px;
-        width:100%;
-        background-color: #000000;
     }
 
     .logo1{
@@ -206,18 +187,23 @@
     }
 
     #modules{
-        margin-top:20px;
-        margin-bottom: 60px;
+        margin-top:40px;
+        margin-bottom:80px;
     }
 
     #modules ul{
-        margin-left:100px;
-        margin-right:100px;
+        margin-left:60px;
+        margin-right:60px;
     }
     
     #modules li{
-        padding-top: 40px;
-        height:225px;
+        padding-top:40px;
+        width:160px;
+        height:240px;
+    }
+
+    #modules button.red{
+        width:160px;
     }
 
     #bloc-services #bloc-encadre{
@@ -232,8 +218,6 @@
     }
 
     .encadre h2{
-        font-size: 28px;
-        line-height: 30px;
         margin-bottom:20px;
     }
 
@@ -251,18 +235,12 @@
     }
     
     #bloc-services .costume2{
-        display: block;
-        position: absolute;
-        width:auto;
         height:90%;
         right: 200px;
         bottom:0;
     }
     
     #bloc-services .costume3{
-        display: block;
-        position: absolute;
-        width:auto;
         height:92%;
         right: 0;
         bottom:0;
@@ -326,27 +304,9 @@
     footer {
         height:80px;
     }
-
-    hr {
-        position: absolute;
-        margin-left:-15px !important ;
-        margin-right:-15px !important ;
-    }
-
-    p.p7{
-        margin-top: 10px;
-        margin-left:-15px;
-        margin-right:-15px;
-    }
-
-    p.p7,
-    p.p7 a{
-        font-size: 14px;
-        line-height: 20px;
-    }
 }
 
-@media screen and (min-width: 834px) and (max-width: 1199px){
+@media screen and (min-width: 834px) and (max-width: 1920px){
 
     body{
         background-color:  #fffae4;
@@ -356,13 +316,13 @@
         position: relative;
         background: url(../img/tablet/tablet_arabesque1.png), url(../img/tablet/tablet_arabesque2.png);
         background-repeat: no-repeat no-repeat;
-        background-size: 171px 499px, 150px 132px;
-        background-position-x: left 20px, right 24px;
-        background-position-y: top 31px, top 24px;
+        background-size: 171px 499px, 140px auto;
+        background-position-x: left 18px, right 20px;
+        background-position-y: top 100px, top 24px;
         background-color: #fffae4;
         width: 100%;
         height:auto;
-        padding-bottom: 20px;
+        padding-bottom: 40px;
     }
 
     #bloc-services #bloc-encadre{
@@ -385,20 +345,29 @@
         margin-left:30px;
     }
 
-    #cadre-encadre .costume1{
-        height:85%;
-        right: 330px;
+    #bloc-services .costume1{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:83%;
+        right: 300px;
         bottom:30px;
     }
     
-    #cadre-encadre .costume2{
-        height:85%;
-        right: 200px;
+    #bloc-services .costume2{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:83%;
+        right: 190px;
         bottom:30px;
     }
     
-    #cadre-encadre .costume3{
-        height:87%;
+    #bloc-services .costume3{
+        display: block;
+        position: absolute;
+        width:auto;
+        height:85%;
         bottom:30px;
         margin-right:10px;
     }
@@ -415,24 +384,28 @@
         display:block;
         background-color: #fffae4;
         width:100%;
-        height:400px;
         height:auto;
-    }
-
-    #bloc-services{
-        background: url(../img/tablet/tablet_arabesque1.png), url(../img/tablet/tablet_arabesque2.png);
-        background-repeat: no-repeat no-repeat;
-        background-size: 171px 499px, 150px 132px;
-        background-position-x: left 24px, right 24px;
-        background-position-y: top 30px, top 24px;
-        background-color: #fffae4;
-        width: 100%;
-        height:auto;
-        padding-bottom: 20px;
     }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1199px){
+@media screen and (min-width: 888px) and (max-width: 991px){
+
+    #bloc-services{
+        background-position-x: left 50px, right 20px;
+        background-position-y: top 100px, top 24px;
+    }
+}
+
+@media screen and (min-width: 950px) and (max-width: 991px){
+
+    #bloc-services{
+        background-size: 171px 499px, 150px auto;
+        background-position-x: left 80px, right 24px;
+        background-position-y: top 100px, top 24px;
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1920px){
 
     #menu-nav-mobile{
         background: url(../img/logo1-ac-vect.svg), url(../img/tablet/tablet-menu_arabesque3.png);
@@ -463,8 +436,8 @@
     }
 
     #modules ul{
-        margin-left:220px;
-        margin-right:220px;
+        margin-left:180px;
+        margin-right:180px;
     }
 
     #bloc-services #cadre-encadre{
@@ -477,19 +450,19 @@
         margin-left:0px;
     }
 
-    #cadre-encadre .costume1{
+    #bloc-services .costume1{
         height:85%;
-        right: 480px;
+        right: 410px;
         bottom:30px;
     }
     
-    #cadre-encadre .costume2{
+    #bloc-services .costume2{
         height:85%;
-        right: 280px;
+        right: 250px;
         bottom:30px;
     }
     
-    #cadre-encadre .costume3{
+    #bloc-services .costume3{
         height:87%;
         bottom:30px;
         margin-right:30px;
@@ -503,21 +476,9 @@
     footer {
         height:60px;
     }
-
-    hr {
-        position: relative;
-        margin-left:0px !important ;
-        margin-right:0px !important ;
-    }
-
-    p.p7{
-        margin-top: 10px;
-        margin-left:0px;
-        margin-right:0px;
-    }
 }
 
-@media screen and (min-width: 1117px) and (max-width: 1199px){
+@media screen and (min-width: 1117px){
 
     #bloc-services{
         position: relative;
@@ -525,7 +486,7 @@
         background-repeat: no-repeat no-repeat;
         background-size: 313px 914px, 150px 132px;
         background-position-x: left -50px, right 24px;
-        background-position-y: top 36px, top 24px;
+        background-position-y: bottom, top 24px;
         background-color: #fffae4;
         width: 100%;
         height:auto;
@@ -533,20 +494,289 @@
     }
 }
 
-@media screen and (min-width: 1200px) and (max-width: 1365px){
+@media screen and (min-width: 1200px){
 
-    #bloc-services{
-        position: relative;
-        background: url(../img/desktop/angeliquecalfatidotcom_arabesque1.png), url(../img/tablet/tablet_arabesque2.png);
-        background-repeat: no-repeat no-repeat;
-        background-size: 313px 914px, 150px 132px;
-        background-position-x: left -50px, right 24px;
-        background-position-y: top 36px, top 24px;
-        background-color: #fffae4;
-        width: 100%;
-        height:auto;
-        padding-bottom: 40px;
+    body{
+        line-height: 23px;
     }
 
+    h2{
+        font-size: 34px;
+        line-height: 40px;
+    }
+    
+    h3{
+        font-size: 34px;
+        line-height: 36px;
+        letter-spacing: -0.1px;
+    }
+    
+    h4{ 
+        font-size: 24px;
+        line-height: 23px;
+        margin-bottom:5px;
+        margin-top:12px;
+    }
+    
+    h5{
+        font-size: 26px;
+        line-height: 34px;
+    }
+    
+    p{
+        font-size: 16px;
+        margin-bottom:23px;
+    }
+    
+    button{
+        height:46px;
+        letter-spacing: 0px;
+    }
 
+    #bloc-actimob{
+        display:none;
+    }
+
+    h3.p1{
+        padding-top: 23px;
+        margin-bottom: 46px;
+    }
+
+    h5.p2{
+        margin-bottom: 12px;
+    }
+
+    #bloc-activity button.clair{
+        margin-top:46px;
+        margin-bottom: 23px;
+    }
+
+    #modules{
+        margin-top:46px;
+        margin-bottom:92px;
+    }
+
+    #modules ul{
+        margin-left:280px;
+        margin-right:280px;
+    }
+    
+    #modules li{
+        padding-top: 46px;
+        width:160px;
+        height:259px;
+    }
+
+    #modules button.red{
+        width:160px;
+    }
+
+    #bloc-services #bloc-encadre{
+        height:574px;
+    }
+
+    #bloc-services #cadre-encadre{
+        height:574px;
+    }
+
+    #cadre-encadre .encadre{
+        height:482px;
+        width:486px;
+        margin-top:46px;
+        margin-left:46px;
+        padding:46px;
+    }
+
+    .encadre h2{
+        margin-bottom:23px;
+    }
+
+    .encadre p.p6{
+        width:352px;
+    }
+
+    .encadre p span.p6tab{
+        display:block;
+        margin-bottom: 46px;
+    }
+
+    #bloc-services .costume1{
+        height:83%;
+        right: 490px;
+        bottom:46px;
+    }
+    
+    #bloc-services .costume2{
+        height:83%;
+        right: 310px;
+        bottom:46px;
+    }
+    
+    #bloc-services .costume3{
+        height:85%;
+        bottom:46px;
+        margin-right:20px;
+    }
+
+    #bloc-boutique{
+        height:391px;
+    }
+    
+    #bloc-boutique h3{
+        padding-top:23px;
+    }
+    
+    #galerie{
+        margin-top:23px;
+        height:207px;
+    }
+    
+    #galerie ul{
+        height:207px;
+    }
+
+    #galerie li img{
+        width:296px;
+        height:207px;
+        margin-right: 20px;
+    }
+    
+    ul span.mailico{
+        background-size: 93px 50px;
+        width:120px;
+        height:120px;
+        margin-top:69px;
+        margin-bottom:69px;
+    }
+
+    ul span.fbico{
+        background-size: 35px 65px;
+        width:120px;
+        height:120px;
+        margin-top:69px;
+        margin-bottom:69px;
+    }
+
+    ul span.mailico:hover,
+    ul span.mailico:active {
+        background-size: 93px 50px;
+    }
+
+    ul span.fbico:hover,
+    ul span.fbico:active {
+        background-size: 35px 65px;
+    }
+
+    footer {
+        height:69px;
+    }
+}
+
+@media screen and (min-width: 1366px){
+
+    #mobile-nav{
+        display:none;
+    }
+    
+    nav#menu{
+        display:block;    
+    }
+
+    header{
+        height:174px;
+        width:100%;
+        background-color: #000000;
+    }
+
+    .logo1{
+        background: url(../img/logo1-ac-vect.svg) no-repeat top 24px left 24px;
+        background-size: auto 135px;
+        width:auto;
+        height:174px;
+    }
+
+    header nav{
+        position:fixed;
+        width:100%;
+        top:0;
+        right:0;
+        z-index: 1000;
+    }
+
+    #menu ul{
+        float: right;
+        margin-right:24px;
+        margin-top:46px;
+    }
+    
+    #menu li{
+        list-style: none;
+        display:inline-block;
+        margin-left: 24px;
+    }
+    
+    #menu  li:first-child {
+        margin-left: 0;	
+    }
+    
+    #menu  li a{
+        font-family: 'Crimson Text Regular';
+        color:#4e473e;
+        font-size: 18px;
+        display: block;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    
+    #menu li .current,
+    #menu li a:hover,
+    #menu li a:active,
+    #menu li a:focus{
+        color:#fffae4;
+    }
+
+    .sticky-nav{          
+        height:141px;
+    }
+
+    .sticky-nav.stuck.logo2{  
+        background: url(../img/tablet/logo2.svg) rgba(0, 0, 0, 0.95) no-repeat top 24px left 24px;
+        background-size: 234px 93px;
+        opacity: 1;
+        z-index: 500;
+        filter: alpha(opacity=100);
+        transition: opacity 0.5s ease-in-out;
+    }
+
+    .covermob,
+    .covertabland{
+        display:none;
+    }
+
+    .coverdesk{
+        display:block;
+        background-color: #fffae4;
+        width:100%;
+        height:auto;
+    }
+
+    #modules ul{
+        margin-left:-15px;
+        margin-right:-15px;
+    }
+
+    #bloc-services{
+        background-size: auto 914px, 150px 132px;
+        background-position-x: left -20px, right 24px;
+        background-position-y: bottom, top 24px;
+        padding-bottom: 69px;
+    }
+}
+
+@media screen and (min-width: 1818px){
+
+    #bloc-services{
+        background-position-x: left 140px, right 24px;
+        background-position-y: bottom, top 24px;
+    }
 }
